# u3d-plugins-development

./: .gitignore  LICENSE  README.md
Example/Assets/Benchmark/: Benchmark.unity
ManagedPlugins/: README.md
ManagedPlugins/TstUnity/: ByteHelper.cs  EnumHelper.cs  MathHelper.cs  TstUnity.csproj
ManagedPlugins/TstUnity/Properties/: AssemblyInfo.cs
Native/: CMakeLists.txt  CMakeLists_nmgen.txt  make_android.sh  make_ios.sh  make_osx.sh  make_win_nav.bat  make_win_nmgen.bat  make_win_tst.bat
Native/tstunity/: tstunity_conf.h
NativePlugins/: CMakeLists.txt  README.md  make_android.sh  make_ios.sh  make_osx.sh  make_win.bat  make_win32.bat  make_win64.bat
NativePlugins/TstUnity/: math_helper.c  math_helper.h  sort_helper.c  sort_helper.h  tstunity_conf.h
NativePlugins/tstunity1/: math_helper.h
PluginsBuild/NativePlugins/tstunity.bundle/Contents/: tstunity
PluginsBuild/NativePlugins/tstunity.bundle/Contents/MacOS/: tstunity
PluginsDeme/Assets/Benchmark/: Benchmark.unity  Perf.cs
PluginsDeme/Assets/Deme/: Deme.cs  Demo.unity
PluginsDeme/Assets/Plugins/tstunity.bundle/Contents/: Info.plist
PluginsDeme/Assets/Scene/: Demo.unity
PluginsDeme/Assets/TstUnity/: PluginUtils.cs
PluginsDeme/ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset
Src/Native/: CMakeLists.txt  CMakeLists_nav.txt  make_osx.sh  make_win_nav.bat  make_win_nmgen.bat  make_win_tst.bat
Tool/: ReadMe.txt
doc1/: README.txt
example/Assets/Benchmark/: Perf.cs
example/Assets/Plugins/Android/: AndroidManifest.xml  README.md
example/Assets/Scene/: C.unity  Demo.unity  Launcher.unity  System.unity
example/Assets/Scene/Managed/: Managed.unity
example/Assets/Scene/Native/: C.unity
example/Assets/Script/: Deme.cs
example/Assets/Scripts/: Launcher.cs  NativeCDemo.cs  NativeDemo.cs  NativeSystemDemo.cs
example/Assets/Scripts/Demo/: ManagedDemo.cs  NativeCDemo.cs  NativeSystemDemo.cs
example/Assets/Scripts/Managed/: ManagedCore.cs
example/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
example1/Assets/Script/: Deme.cs
example1/Assets/Script/TstUnity/: PluginUtils.cs
src/managed/TstUnity/: ByteHelper.cs  EnumHelper.cs  MathHelper.cs  TstUnity.csproj  TstUnity.sln
src/native/: README.md  make_android.sh  make_win.bat
src/native/c/: CMakeLists.txt  README.md  make_android.sh  make_ios.sh  make_osx.sh  make_win.bat
src/native/c/tstunity/: sort_helper.c  tstunity_conf.h  unity_helper.c  unity_helper.h
src/native/system/android/: MainTemplate.gradle  README.md
src/native/system/ios/: NativeHelper.mm
src/native/tstunity/: buffer_helper.h
src/system/: README.md
src/system/android/: README.md
src/system/ios/: README.md
src1/native/: make_ios.sh
src1/native/tstunity/: buffer_helper.c
test/: README.md
(+26 files in other folders)
